apps/forgejo-runner/manifests/service-buildkitd.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: forgejo-runner
  labels:
    app: buildkitd
spec:
  type: ClusterIP
  selector:
    app: buildkitd
  ports:
    - name: buildkit
      port: 1234
      targetPort: buildkit
